# sqliteshell

./: LICENSE  README.md  pyproject.toml
sqliteshell/: __main__.py
